--- a/aquiseconstruye/requirements.txt
+++ b/aquiseconstruye/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.5.2
+attrs==23.1.0
 beautifulsoup4==4.11.1
 boto3==1.26.119
 botocore==1.29.119
 branca==0.6.0
 charset-normalizer==2.1.1
 click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
 contourpy==1.0.7
 cycler==0.11.0
 decorator==5.1.1
@@ -14,18 +17,22 @@ django-bootstrap4==22.3
 django-custom-user==1.1
 django-filter==22.1
 django-ipware==5.0.0
+django-leaflet==0.29.0
 django-pandas==0.6.6
 django-s3-storage==0.13.11
 django-storages==1.13.2
 django-tinymce==3.5.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
+Fiona==1.9.4.post1
 folium==0.13.0
 fonttools==4.39.3
 future==0.18.2
 geocoder==1.38.1
 geographiclib==2.0
+geopandas==0.13.2
 geopy==2.3.0
+gmplot==1.4.1
 gunicorn==20.1.0
 idna==3.4
 Jinja2==3.1.2
@@ -33,6 +40,7 @@ jmespath==1.0.1
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.7.1
+mpld3==0.5.9
 numpy==1.23.5
 packaging==23.1
 pandas==2.0.1
@@ -40,11 +48,13 @@ Pillow==9.2.0
 plotly==5.14.1
 psycopg2-binary==2.9.5
 pyparsing==3.0.9
+pyproj==3.6.0
 python-dateutil==2.8.2
 pytz==2022.7.1
 ratelim==0.1.6
 requests==2.28.1
 s3transfer==0.6.0
+shapely==2.0.1
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
